Use explicit naming for our charts types
